--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Куско Кошкин</title>
+    <link href="css/common_styles.css" rel="stylesheet">
+    <link href="css/style_index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/faviconka_ru_1513.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/faviconka_ru_1513.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <!--Не знаю, можно ли так, но пусть это первый макет. во всяком случае работает-->
+    <div class="maket-1">
+        <nav>
+            <div class="nav-menu-horizontal">
+                <ul>
+                    <li>
+                        <a href="index.html" class="active">Главная</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Заметки</a>
+                    </li>
+                    <li>
+                        <a href="galery.html">Галерея</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Обо мне</a>
+                    </li
+            </div>
+            </ul>
+        </nav>
+        <div id="body-inside">
+            <section id="photo">
+                
+            </section>
+            <section id="description">
+                <div>
+                    <div id="heading"><p id="name"><span class="red">К</span>УСКО<br>КОШКИ<span class="red">Н</span><p></div>
+                    <p id="cite">Бог сотворил кошку для того, чтобы у человека был тигр, которого можно погладить.</p>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!--Пусть это второй макет-->
+    <div class="maket-2">
+        <div id="body-inside-2">
+            <section id="photo-2">
+                <img src="images/photo.jpg" width="100%">
+            </section>
+            <section id="description-2">
+                <div>
+                    <div id="heading-2"><p id="name-2"><span class="red">К</span>УСКО<br>КОШКИ<span class="red">Н</span><p></div>
+                    <p id="cite-2">Бог сотворил кошку для того, чтобы у человека был тигр, которого можно погладить.</p>
+                </div>
+            </section>
+        </div>
+        <section class="container center">
+            <div class="article-heading">
+                <a href="contact_me.html">
+                    <h2>Обо мне</h2> 
+                </a>
+            </div>
+            <div class="article-heading">
+                <a href="blog.html"><h2>Избранные статьи</h2></a>
+            </div>
+            <div class="article-heading">
+                <a href="galery.html"><h2>Фотогалерея</h2></a>
+            </div>
+        </section>
+        <footer class="footer-2">
+            © Куско Кошкин 2020
+            <br>
+            <a href="tel:+1234567890"> +1234567890 </a>; <a href="mailto:kot@koshkin.ru?subject=Вопрос по блогу"> kot@koshkin.ru</a>
+            <br>
+            А также follow me 
+            <br>
+            <a href="https://instagram.com/kuskokoshkin"> <img src="images/icons/inst.png" height="20"></a>
+            <a href="https://vk.com/kuskokoshkin"> <img src="images/icons/vk.png" height="20"></a>
+        </footer>
+    </div class="maket-2">
+</body>
+</html>
