--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
             <div class="article-heading">
                 <a href="articles/article_template-0.html">
                     <h2>Лоток или тапки?</h2> 
-                    <p class="word-counter" id="">101 слово</p>
+                    <p class="word-counter" id="">157 слов</p>
                 </a>
             </div>
         </section>
