--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             </section>
         </div>
         <section class="container center">
-            <div class="article-heading">
+            <div class="article-heading-2">
                 <a href="contact_me.html">
                     <h2>Обо мне</h2> 
                 </a>
             </div>
-            <div class="article-heading">
+            <div class="article-heading-2">
                 <a href="blog.html"><h2>Избранные статьи</h2></a>
             </div>
-            <div class="article-heading">
+            <div class="article-heading-2">
                 <a href="galery.html"><h2>Фотогалерея</h2></a>
             </div>
         </section>
@@ -76,8 +76,8 @@
             <br>
             А также follow me 
             <br>
-            <a href="https://instagram.com/kuskokoshkin"> <img src="images/icons/inst.png" height="20"></a>
-            <a href="https://vk.com/kuskokoshkin"> <img src="images/icons/vk.png" height="20"></a>
+            <a href="https://instagram.com/alisiamilki"> <img src="images/icons/inst.png" height="20"></a>
+            <a href="https://vk.com/agata_fed"> <img src="images/icons/vk.png" height="20"></a>
         </footer>
     </div class="maket-2">
 </body>
