--- a/galery.html
+++ b/galery.html
@@ -24,14 +24,16 @@
                     <a href="galery.html" class="active">Галерея</a>
                 </li>
                 <li>
-                    <a href="index.html">Обо мне</a>
+                    <a href="about_me.html">Обо мне</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <header>
-        <h1>Галерея</h1>
-    </header>
+    <section class="slider">
+        <div class="slider-inside">
+            <div class="slide slide1"></div>
+        </div>
+    </section>
     <div class="flex container">
         <div class="image-in-galery"><img src="images/gallery/cat_hisnik.jpg" alt="" height="100%"></div>
         <div class="image-in-galery"><img src="images/gallery/cat_kaef.jpg" alt="" height="100%"></div>
@@ -45,14 +47,3 @@
     </div>
 </body>
 </html> 
-<!--Это мне еще пригодится 
-        <button class="sandwich"><img src="images/menu.png" width="50px"></button>
-    .sandwich {
-    background: none;
-    border: 0px;
-    width: 50px;
-    height: 50px;
-    margin: 5px 10px;
-    display: none;
-}
--->
