--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
                 <a href="galery.html">Галерея</a>
             </li>
             <li>
-                <a href="index.html">Обо мне</a>
+                <a href="about_me.html">Обо мне</a>
             </li>
         </ul>
     </nav>
