--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                         <a href="galery.html">Галерея</a>
                     </li>
                     <li>
-                        <a href="index.html">Обо мне</a>
-                    </li
+                        <a href="about_me.html">Обо мне</a>
+                    </li>
+                </ul>
             </div>
-            </ul>
         </nav>
         <div id="body-inside">
             <section id="photo">
