--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <section class="container center">
             <div class="article-heading-2">
-                <a href="contact_me.html">
+                <a href="about_me.html">
                     <h2>Обо мне</h2> 
                 </a>
             </div>
