--- a/about_me.html
+++ b/about_me.html
@@ -144,6 +144,7 @@
                         <p>Я бы хотел вырасти большим и сильным котом-хищником, поэтому сейчас днями и ночами оттачиваю свои навыки на ногах людей и постоянно прошу кушать.</p>
                         <h2><i>Мои достижения</i></h2>
                         <p>Главным своим достижением на данный момент я считаю то, что смог обаять человека и попасть в хороший дом.</p>
+                        <div class="red-liner"></div>
                         <h2>А теперь хотелось бы узнать немного о вас (заполните мою анкету)</h2>
                         <form method="POST">
                             <fieldset>
