--- a/blog.html
+++ b/blog.html
@@ -60,4 +60,14 @@
             </div>
         </section>
     </main>
+    <footer class="footer-1">
+        © Куско Кошкин 2020
+        <br>
+        <a href="tel:+1234567890"> +1234567890 </a>; <a href="mailto:kot@koshkin.ru?subject=Вопрос по блогу"> kot@koshkin.ru</a>
+        <br>
+        А также follow me 
+        <br>
+        <a href="https://instagram.com/alisiamilki"> <img src="images/icons/inst.png" height="20"></a>
+        <a href="https://vk.com/agata_fed"> <img src="images/icons/vk.png" height="20"></a>
+    </footer>
 </html>
