--- a/galery.html
+++ b/galery.html
@@ -35,9 +35,30 @@
         </div>
     </section>
     <div class="flex container">
-        <div class="image-in-galery"><img src="images/gallery/cat_hisnik.jpg" alt="" height="100%"></div>
-        <div class="image-in-galery"><img src="images/gallery/cat_kaef.jpg" alt="" height="100%"></div>
-        <div class="image-in-galery"><img src="images/gallery/cat_kusya.jpg" alt="" height="100%"></div>
+        <div class="image-in-galery modal-div"><a href="#modal-form-1"><img src="images/gallery/cat_hisnik.jpg" alt="" height="100%"></a></div>
+        <div id="modal-form-1" class="modal-form">
+        </div>
+        <div class="form-body">
+            <img src="images/gallery/cat_hisnik.jpg" height="90%">
+            <p><span class="date-style">27.11.2020</span> Просто охочусь на хозяина</p>
+            <a href="#" class="close-modal-icon">X</a>
+        </div>
+        <div class="image-in-galery"><a href="#modal-form-2"><img src="images/gallery/cat_kaef.jpg" alt="" height="100%"></a></div>
+        <div id="modal-form-2" class="modal-form">
+        </div>
+        <div class="form-body">
+            <img src="images/gallery/cat_kaef.jpg" height="90%">
+            <p><span class="date-style">26.11.2020</span> Лежу отдыхаю</p>
+            <a href="#" class="close-modal-icon">X</a>
+        </div>
+        <div class="image-in-galery"><a href="#modal-form-3"><img src="images/gallery/cat_kusya.jpg" alt="" height="100%"></a></div>
+        <div id="modal-form-3" class="modal-form">
+        </div>
+        <div class="form-body">
+            <img src="images/gallery/cat_kusya.jpg" height="90%">
+            <p><span class="date-style">24.11.2020</span> Кусаюсь потому, что могу</p>
+            <a href="#" class="close-modal-icon">X</a>
+        </div>
         <div class="image-in-galery"><img src="images/gallery/cat_nice.jpg" alt="" height="100%"></div>
         <div class="image-in-galery"><img src="images/gallery/cat_sad.jpg" alt="" height="100%"></div>
         <div class="image-in-galery"><img src="images/gallery/cat_scared.jpg" alt="" height="100%"></div>
@@ -45,5 +66,15 @@
         <div class="image-in-galery"><img src="images/gallery/cat_smile.jpg" alt="" height="100%"></div>
         <div class="image-in-galery" id="next"><img src="images/gallery/next-arrow.png" width="100"></div>
     </div>
+    <footer class="footer-1">
+        © Куско Кошкин 2020
+        <br>
+        <a href="tel:+1234567890"> +1234567890 </a>; <a href="mailto:kot@koshkin.ru?subject=Вопрос по блогу"> kot@koshkin.ru</a>
+        <br>
+        А также follow me 
+        <br>
+        <a href="https://instagram.com/alisiamilki"> <img src="images/icons/inst.png" height="20"></a>
+        <a href="https://vk.com/agata_fed"> <img src="images/icons/vk.png" height="20"></a>
+    </footer>
 </body>
 </html> 
