--- a/galery.html
+++ b/galery.html
@@ -41,7 +41,9 @@
         <div class="form-body">
             <img src="images/gallery/cat_hisnik.jpg" height="90%">
             <p><span class="date-style">27.11.2020</span> Просто охочусь на хозяина</p>
+            <a href="#" class="pre-modal-icon"><</a> 
             <a href="#" class="close-modal-icon">X</a>
+            <a href="#modal-form-2" class="next-modal-icon">></a>
         </div>
         <div class="image-in-galery"><a href="#modal-form-2"><img src="images/gallery/cat_kaef.jpg" alt="" height="100%"></a></div>
         <div id="modal-form-2" class="modal-form">
@@ -49,7 +51,9 @@
         <div class="form-body">
             <img src="images/gallery/cat_kaef.jpg" height="90%">
             <p><span class="date-style">26.11.2020</span> Лежу отдыхаю</p>
+            <a href="#modal-form-1" class="pre-modal-icon"><</a> 
             <a href="#" class="close-modal-icon">X</a>
+            <a href="#modal-form-3" class="next-modal-icon">></a>
         </div>
         <div class="image-in-galery"><a href="#modal-form-3"><img src="images/gallery/cat_kusya.jpg" alt="" height="100%"></a></div>
         <div id="modal-form-3" class="modal-form">
@@ -57,7 +61,9 @@
         <div class="form-body">
             <img src="images/gallery/cat_kusya.jpg" height="90%">
             <p><span class="date-style">24.11.2020</span> Кусаюсь потому, что могу</p>
+            <a href="#modal-form-2" class="pre-modal-icon"><</a> 
             <a href="#" class="close-modal-icon">X</a>
+            <a href="#modal-form-4" class="next-modal-icon">></a>
         </div>
         <div class="image-in-galery"><img src="images/gallery/cat_nice.jpg" alt="" height="100%"></div>
         <div class="image-in-galery"><img src="images/gallery/cat_sad.jpg" alt="" height="100%"></div>
