--- a/galery.html
+++ b/galery.html
@@ -39,7 +39,7 @@
         <div id="modal-form-1" class="modal-form">
         </div>
         <div class="form-body">
-            <img src="images/gallery/cat_hisnik.jpg" height="90%">
+            <img class="large-img-in-modal" src="images/gallery/cat_hisnik.jpg" height="90%">
             <p><span class="date-style">27.11.2020</span> Просто охочусь на хозяина</p>
             <a href="#" class="pre-modal-icon"><</a> 
             <a href="#" class="close-modal-icon">X</a>
@@ -49,7 +49,7 @@
         <div id="modal-form-2" class="modal-form">
         </div>
         <div class="form-body">
-            <img src="images/gallery/cat_kaef.jpg" height="90%">
+            <img class="large-img-in-modal" src="images/gallery/cat_kaef.jpg" height="90%">
             <p><span class="date-style">26.11.2020</span> Лежу отдыхаю</p>
             <a href="#modal-form-1" class="pre-modal-icon"><</a> 
             <a href="#" class="close-modal-icon">X</a>
@@ -59,7 +59,7 @@
         <div id="modal-form-3" class="modal-form">
         </div>
         <div class="form-body">
-            <img src="images/gallery/cat_kusya.jpg" height="90%">
+            <img class="large-img-in-modal" src="images/gallery/cat_kusya.jpg" height="90%">
             <p><span class="date-style">24.11.2020</span> Кусаюсь потому, что могу</p>
             <a href="#modal-form-2" class="pre-modal-icon"><</a> 
             <a href="#" class="close-modal-icon">X</a>
